# SwitchBTProxy

./: CMakeLists.txt  bluecubeexample.c  ds4.txt  platformio.ini  pro.txt  pro2.txt  readme.md  sdkconfig  sdkconfig.old  vendorids
components/bta_hidd/: CMakeLists.txt  readme.md
components/bta_hidd/include/: custom_bt_target.h  custom_trace.h  hidd_int.h
components/bta_hidd/include/bta/: bta_hd_api.h
components/bta_hidd/include/stack/: hidd_api.h
components/bta_hidd/src/bta_hd/: bta_hd_act.cc  bta_hd_api.cc  bta_hd_main.cc
components/bta_hidd/src/stack/: hidd_api.cc  hidd_conn.cc
components/custom_btc_hid/: CMakeLists.txt  component.mk.old  readme.md
components/custom_btc_hid/include/: bt_gap_api.h  bt_hid_device_api.h  bt_hid_host_api.h  bt_hid_input_device.h
components/custom_btc_hid/src/: bt_gap_api.cpp  bt_hid_device_api.cpp  bt_hid_host_api.cpp  bt_hid_input_device.cpp
lib/esp_hid/: library.json
lib/esp_hid/src/: bt_hidh.c
ref/btc_fork/src/: esp_hidd_api.c
ref/oldbt/bluetooth/: bt_gap_api.cpp  bt_gap_api.h  bt_hid_device_api.cpp  bt_hid_host_api.cpp  bt_hid_host_api.h  bt_hid_input_device.h
src/: bt_pro_controller.cpp  bt_pro_controller.h  emulated_bt_pro_controller.cpp  emulated_bt_pro_controller.h  gamepad.cpp  gamepad.h  main.cpp  switch_pro_controller.cpp  switch_pro_controller.h  utils.cpp  utils.h  vendor_product_ids.h
src/bluetooth/: bt_device.h  bt_discovery.cpp  bt_discovery.h  bt_gap.cpp  bt_gap.h  bt_hid_device.cpp  bt_hid_device.h  bt_hid_host.cpp  bt_hid_host.h  bt_hid_input_device.cpp  bt_hid_input_device.h  bt_stack.cpp  bt_stack.h  bt_utils.cpp  bt_utils.h
src/hid/: hid_gamepad_input.h
